--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,24 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://accounts.google.com/gsi/client" async></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script>
+    function decodeJWTToken(token) {
+      return JSON.parse(atob(token.split(".")[1]));
+    }
+    function handleCredentialResponse(response) {
+      // to decode the credential response.
+      const responsePayload = decodeJWTToken(response.credential);
+      localStorage.setItem("loggedInUser", JSON.stringify(responsePayload));
+      window.location.href = "http://localhost:4200/pages/product";
+    }
+    function handleSignout() {
+      google.accounts.id.disableAutoSelect();
+    }    
+  </script>
 </head>
 <body>
   <app-root></app-root>
+
 </body>
 </html>
