google login done

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EcomPrimeng</title>
+  <title>Orion Shop</title>
+  <link rel="icon" href="./assets/images/oi.png" type="image/x-icon">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <script src="https://accounts.google.com/gsi/client"></script>
 </head>
 <body>
   <app-root></app-root>
